--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "@storybook/preset-create-react-app": "^3.2.0",
     "@storybook/react": "^6.3.12",
     "autoprefixer": "^9",
+    "chromatic": "^6.0.6",
     "postcss": "^7",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat"
   }
