--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "test": "craco test",
     "eject": "react-scripts eject",
     "storybook": "start-storybook -p 6006 -s public",
-    "build-storybook": "build-storybook -s public"
+    "build-storybook": "build-storybook -s public",
+    "chromatic": "npx chromatic --project-token=3cab6f3dfbf6"
   },
   "eslintConfig": {
     "extends": [
