--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
-    "react-mapbox-gl": "^5.1.1",
+    "react-map-gl": "^6.1.18",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.0.1"
   },
