mapbox token in gitactions

--- a/.github/workflows/chromatic.yml
+++ b/.github/workflows/chromatic.yml
@@ -10,6 +10,11 @@ jobs:
     runs-on: ubuntu-latest
     # The list of steps that the action will go through
     steps:
+      - name: "Check if REACT_APP_MAPBOX_TOKEN is set"
+        if: ${{ env.REACT_APP_MAPBOX_TOKEN !== '' }}
+        run: echo "MAPBOX Token set to $REACT_APP_MAPBOX_TOKEN"
+        env:
+          REACT_APP_MAPBOX_TOKEN: ${{ secrets.REACT_APP_MAPBOX_TOKEN }}
       - uses: actions/checkout@v1
       - run: yarn
         #👇 Adds Chromatic as a step in the workflow
