--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-query": "^3.34.5",
     "react-router-dom": "6",
     "react-scripts": "4.0.3",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^1.0.1",
+    "worker-loader": "^3.0.8"
   },
   "scripts": {
     "start": "HTTPS=true craco start",
