--- a/public/manifest.json
+++ b/public/manifest.json
@@ -20,6 +20,6 @@
   ],
   "start_url": ".",
   "display": "standalone",
-  "theme_color": "#1E1F1D",
+  "theme_color": "#FAFAF5",
   "background_color": "#FAFAF5"
 }
